# maitrise

./: .copier-answers.yml  .gitignore  .pdm.toml  .pre-commit-config.yaml  .pylintrc  Checking_data.py  README.md  Test_TSD_article.ipynb  pyproject.toml  requirements.txt  test_sample.ipynb
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  postCreateCommand.sh
.devcontainer/files/: .bash_profile
src/: Checking_data.py  ReadMe.md
src/Metrics/: ECG_Assess_2022.py  Fiducial_metrics.py  HurstExponent.py  MoRE_index_2011.py  Non_Fiducial_metrics.py  Our_SQA_method.py  TSD_cal.py  Wrapper_main_function.py
src/attractor_creation/: attractor_generator.py
src/notebooks/: Attractor_shuffling.ipynb  Best_model_selection.ipynb  Best_model_selection_CB.ipynb  Best_model_selection_old.ipynb  Calculate_metrics.ipynb  MOGPTK_reconstruction_lead.ipynb  Main_Runner.ipynb  Main_Runner_old.ipynb  Numba_adapt_TSD.ipynb  Pathology_TSD.ipynb  Reccurenceplot_attractor.ipynb  SNR_ECG_TSD.ipynb  SQA_trials.ipynb  Statistic_lead.ipynb  Test_TSD_article.ipynb  compute_metrics.ipynb  create_attractor.ipynb  dataset_loader_torch.ipynb  test_sample.ipynb  train_tree.ipynb
src/shared_utils/: Custom_Logit.py  HurstExponent.py  Logistic_reg_model.py  MoRE_index_2011.py  SQA_TSD_method.py  Statistical_test_index.py  TSD_cal.py  Time_series_dimensions_calculus.py  gen_sde.py  lead_completion_AR1.py  utils_data.py  utils_parallel.py
