[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "ipywidgets>=8.0.2",
    "ipykernel>=6.15.3",
    "matplotlib>=3.6.0",
    "numpy>=1.23.3",
    "pandas>=1.5.0",
    "petastorm>=0.12.0",
    "pyspark>=3.3.0",
    "scikit-learn>=1.1.2",
    "scipy>=1.9.1",
    "py-ecg-detectors>=1.3.2",
    "hfda>=0.1.1",
]
requires-python = ">=3.10, <3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
post_install = "pre-commit install"

[tool.pdm]
# version = {use_scm = true}
package-dir = "src"
# editable-backend = "editables"

[tool.pdm.dev-dependencies]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
quality = [
    "darglint>=1.8",
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.9",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.7",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.5",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.5",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.12",
    "wps-light>=0.15",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
dev = [
    "pre-commit>=2.20.0",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "template_project"
include_trailing_comma = true

[tool]
